--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -735,14 +735,13 @@ table.custom-table tr td {
 
 @media screen and (max-width: 768px) {
   #allocation-confirm .custom-modal {
-    padding-top: calc(74px + 8rem);
+    padding-top: calc(74px + 7rem);
   }
 }
 
 @media screen and (max-width: 575px) {
   #allocation-confirm .custom-modal {
     padding-top: calc(74px + 5rem);
-    padding-bottom: 22rem;
   }
 }
 
@@ -782,6 +781,12 @@ table.custom-table tr td {
   }
   #allocation-confirm .custom-modal .modal-body .btns .btn-bg-primary {
     width: 328px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  #allocation-confirm .custom-modal .modal-body .slidecontainer {
+    padding-bottom: 7rem;
   }
 }
 
@@ -1383,7 +1388,7 @@ table.custom-table tr td {
 }
 
 #blogs .hero .btn {
-  width: 214px;
+  width: 195px;
 }
 
 @media screen and (min-width: 992px) {
@@ -1403,7 +1408,7 @@ table.custom-table tr td {
       -ms-flex-align: start;
           align-items: flex-start;
   padding: 2rem 0;
-  border-bottom: 1px solid #bcbcbc;
+  border-bottom: 1px solid #bcbcbc69;
 }
 
 @media screen and (max-width: 575px) {
@@ -1574,6 +1579,17 @@ table.custom-table tr td {
   margin-top: 4rem;
 }
 
+@media screen and (min-width: 769px) {
+  #refer-and-invest .cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 @media screen and (max-width: 1366px) {
   #refer-and-invest .cards {
     margin-top: 1rem;
@@ -1609,7 +1625,7 @@ table.custom-table tr td {
 #refer-and-invest .cards .card {
   margin: 1rem 0;
   background-color: #fffbef;
-  padding: 2rem 5rem;
+  padding: 2rem 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1620,6 +1636,29 @@ table.custom-table tr td {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 20px;
+  padding-top: 6rem;
+}
+
+@media screen and (min-width: 769px) {
+  #refer-and-invest .cards .card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 32.5%;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  #refer-and-invest .cards .card {
+    padding-top: 4rem;
+  }
+}
+
+@media screen and (max-width: 1460px) and (min-width: 1367px) {
+  #refer-and-invest .cards .card {
+    width: 33%;
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -1648,19 +1687,8 @@ table.custom-table tr td {
 }
 
 #refer-and-invest .cards .card .img {
-  width: 18%;
-}
-
-@media screen and (max-width: 1200px) {
-  #refer-and-invest .cards .card .img {
-    width: 16%;
-  }
-}
-
-@media screen and (max-width: 991px) {
-  #refer-and-invest .cards .card .img {
-    width: 25%;
-  }
+  width: 100%;
+  text-align: center;
 }
 
 @media screen and (max-width: 650px) {
@@ -1673,6 +1701,18 @@ table.custom-table tr td {
 
 #refer-and-invest .cards .card .img img {
   width: 83px;
+}
+
+@media screen and (min-width: 769px) {
+  #refer-and-invest .cards .card .img img {
+    width: 120px;
+  }
+}
+
+@media screen and (min-width: 1367px) {
+  #refer-and-invest .cards .card .img img {
+    width: 180px;
+  }
 }
 
 @media screen and (max-width: 991px) {
@@ -1694,15 +1734,18 @@ table.custom-table tr td {
   width: 82%;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 769px) {
   #refer-and-invest .cards .card .text {
-    width: 84%;
+    width: 100%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 6rem;
   }
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1366px) {
   #refer-and-invest .cards .card .text {
-    width: 75%;
+    margin-top: 4rem;
   }
 }
 
@@ -1722,10 +1765,22 @@ table.custom-table tr td {
 }
 
 #refer-and-invest .cards .card .text .sub-section {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   margin-right: 2rem;
+}
+
+@media screen and (min-width: 769px) {
+  #refer-and-invest .cards .card .text .sub-section {
+    min-width: unset;
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #refer-and-invest .cards .card .text .sub-section {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -1742,52 +1797,59 @@ table.custom-table tr td {
   }
 }
 
+@media screen and (max-width: 1669px) {
+  #refer-and-invest .cards .card .text .sub-section .small-text {
+    min-height: 40px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  #refer-and-invest .cards .card .text .sub-section .small-text {
+    min-height: 36px;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  #refer-and-invest .cards .card .text .sub-section .big-text {
+    margin-top: 0 !important;
+  }
+}
+
 #refer-and-invest .cards .card .text .sub-section:nth-child(1) {
   width: 10%;
-  margin-left: 2rem;
 }
 
-@media screen and (min-width: 1366px) {
+@media screen and (min-width: 769px) {
   #refer-and-invest .cards .card .text .sub-section:nth-child(1) {
-    min-width: 165px;
+    min-width: 76px;
   }
 }
 
-@media screen and (max-width: 1365px) {
+@media screen and (min-width: 1670px) {
   #refer-and-invest .cards .card .text .sub-section:nth-child(1) {
-    min-width: 85px;
+    min-width: 148px;
   }
 }
 
-@media screen and (max-width: 650px) {
-  #refer-and-invest .cards .card .text .sub-section:nth-child(1) {
-    margin-left: 0;
-  }
-}
-
-@media screen and (min-width: 1366px) {
-  #refer-and-invest .cards .card .text .sub-section:nth-child(2) {
-    min-width: 140px;
-  }
-}
-
-@media screen and (min-width: 1366px) {
-  #refer-and-invest .cards .card .text .sub-section:nth-child(3) {
-    min-width: 165px;
-  }
-}
-
-@media screen and (min-width: 1366px) {
+@media screen and (min-width: 769px) {
   #refer-and-invest .cards .card .text .sub-section:nth-child(4) {
-    min-width: 220px;
+    min-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 6rem;
   }
 }
 
-@media screen and (max-width: 1365px) {
+@media screen and (max-width: 1366px) {
   #refer-and-invest .cards .card .text .sub-section:nth-child(4) {
     -webkit-box-flex: 0;
         -ms-flex-positive: 0;
             flex-grow: 0;
+    margin-top: 3rem;
   }
 }
 
@@ -1811,12 +1873,6 @@ table.custom-table tr td {
     width: 100%;
     max-width: 296px;
   }
-}
-
-#refer-and-invest .cards .card .text.refer {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
 }
 
 @media screen and (max-width: 650px) {
@@ -1844,40 +1900,18 @@ table.custom-table tr td {
 }
 
 #refer-and-invest .cards .card .text.refer .form {
-  width: 323px;
-}
-
-@media screen and (max-width: 1366px) {
-  #refer-and-invest .cards .card .text.refer .form {
-    width: 66px;
-  }
-}
-
-#refer-and-invest .cards .card .text.refer .reminder {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  width: 100%;
 }
 
 #refer-and-invest .cards .card .text.refer .referral {
-  width: 375px;
-  margin-right: 3rem;
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (min-width: 769px) {
   #refer-and-invest .cards .card .text.refer .referral {
-    width: 285px;
-    margin-right: 1rem;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  #refer-and-invest .cards .card .text.refer .referral {
-    width: 210px;
-    margin-right: 1rem;
+    width: 100%;
   }
 }
 
@@ -1903,16 +1937,41 @@ table.custom-table tr td {
     width: 100%;
     max-width: 296px;
   }
-  #refer-and-invest .cards .card .text.refer .sub-section .copy {
-    width: 100%;
+}
+
+#refer-and-invest .cards .card .text.refer .sub-section.social-sub-section {
+  width: 100%;
+}
+
+@media screen and (min-width: 1367px) {
+  #refer-and-invest .cards .card .text.refer .sub-section.social-sub-section {
+    margin-top: 5.5rem;
   }
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1366px) {
+  #refer-and-invest .cards .card .text.refer .sub-section.social-sub-section {
+    margin-top: 2.5rem;
+  }
+}
+
+#refer-and-invest .cards .card .text.refer .sub-section .copy {
+  width: 100%;
+}
+
+@media screen and (min-width: 769px) {
   #refer-and-invest .cards .card .text.refer .social {
-    -webkit-box-pack: justify !important;
-        -ms-flex-pack: justify !important;
-            justify-content: space-between !important;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  #refer-and-invest .cards .card .text.refer .social {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   #refer-and-invest .cards .card .text.refer .social a {
     margin-right: 0 !important;
@@ -1936,8 +1995,11 @@ table.custom-table tr td {
   }
 }
 
-#refer-and-invest .cards .card .text .form {
-  max-width: 315px;
+#refer-and-invest .cards .card .text .reminder {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-top: 2.25rem;
 }
 
 @media screen and (max-width: 991px) {
@@ -1962,6 +2024,16 @@ table.custom-table tr td {
   }
   #refer-and-invest .cards .card .text .reminder .btn {
     max-width: 300px;
+  }
+}
+
+#refer-and-invest .cards .card .text .reminder .btn {
+  width: 254px;
+}
+
+@media screen and (max-width: 1366px) {
+  #refer-and-invest .cards .card .text .reminder .btn {
+    width: 174px;
   }
 }
 
@@ -2736,6 +2808,12 @@ table.custom-table tr td {
 @media screen and (max-width: 575px) {
   #notifications .head button {
     margin-left: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  #notifications .body {
+    margin-left: -0.25rem;
   }
 }
 
