--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -789,6 +789,7 @@ select.list-dt:focus {
 }
 .slider_text_cont_p1 a {
   display: flex;
+  border-bottom: 1px solid #fff;
 }
 .slider_text_cont_p1 img {
 }
@@ -7355,7 +7356,7 @@ select.list-dt:focus {
   position: absolute;
   bottom: 2rem;
   background-color: #fff;
-  padding: 1rem 2rem;
+  padding: 0.75rem 2rem;
   text-align: left;
   border: 1px solid #ffc32c;
   font-size: 16px;
@@ -7384,6 +7385,7 @@ select.list-dt:focus {
 
   .custom-tooltip .close {
     padding: 0.5rem;
+    right: 0.5rem;
   }
 }
 
@@ -7655,14 +7657,26 @@ select.list-dt:focus {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .sebi .sebi-img {
+    width: 48px;
+  }
+}
+
 #signup-modal {
   padding-top: 1.5rem;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 575px) {
   #signup-modal {
     padding-top: 7rem;
     padding-bottom: 7rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #signup-modal {
+    padding-top: 5rem;
   }
 
   #signup-modal .container {
@@ -7677,7 +7691,9 @@ select.list-dt:focus {
 
   #signup-modal .col-md-7 {
     flex: 0 1 auto;
-    max-width: 100%;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
     order: 1;
   }
 
@@ -7708,6 +7724,9 @@ select.list-dt:focus {
 }
 
 @media screen and (max-width: 768px) {
+  #signup-modal .btn {
+    min-width: 25%;
+  }
 }
 
 @media screen and (max-width: 575px) {
@@ -7721,11 +7740,74 @@ select.list-dt:focus {
   padding-bottom: 6rem;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 769px) {
+  #otp-modal .img img {
+    transform: translateX(-0.75rem);
+  }
+}
+
+@media screen and (max-width: 768px) {
   #otp-modal {
     padding-top: 9rem;
-    padding-bottom: 5rem;
+    padding-bottom: 0rem;
   }
+
+  #otp-modal .row > .col-md-7,
+  #otp-modal .row > .col-md-5 {
+    flex: 0 1 auto;
+    max-width: 100%;
+  }
+
+  #otp-modal .text-md-left {
+    text-align: center !important;
+  }
+
+  #otp-modal .mb-4 {
+    margin-bottom: 1.5rem !important;
+  }
+
+  #otp-modal .img {
+    width: 116px;
+  }
+}
+
+@media screen and (max-width: 820px) and (min-width: 769px) {
+  #otp-modal {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  #otp-modal {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  #otp-modal h2 {
+    font-size: 24px;
+  }
+
+  #otp-modal .sub {
+    text-align: center;
+  }
+
+  #otp-modal .img img {
+    width: 110px;
+  }
+
+  #otp-modal .img {
+    width: 80px;
+  }
+}
+
+#otp-modal .btns {
+  margin-top: 2.5rem;
+}
+
+#otp-modal .btns .row > * {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 @media screen and (max-width: 575px) {
@@ -7738,17 +7820,16 @@ select.list-dt:focus {
 #otp-modal .otp-boxes,
 #otp-modal .btns {
   max-width: 300px;
+  margin-left: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   #otp-modal .otp-boxes,
   #otp-modal .btns {
     margin-left: auto;
     margin-right: auto;
   }
-}
 
-@media screen and (max-width: 767px) {
   #otp-modal .btns {
     margin-top: 5rem !important;
     max-width: 480px;
@@ -7761,17 +7842,15 @@ select.list-dt:focus {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   #otp-modal .sub {
-    max-width: 230px;
+    max-width: 310px;
     margin-left: auto;
     margin-right: auto;
-    position: relative;
-    right: 2rem;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   #otp-modal .form {
     margin-left: auto;
     margin-right: auto;
@@ -7787,6 +7866,7 @@ select.list-dt:focus {
   padding: 1.125rem 0.75rem;
   text-align: center;
   font-weight: 500;
+  height: 72px;
 }
 
 #otp-modal .btns .col-6 {
