--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -2168,6 +2168,10 @@ textarea.custom-input.with-outline,
   }
 }
 
+#right-menu-login .setting .setting-main .item:last-child {
+  margin-bottom: 5rem;
+}
+
 #right-menu-login .setting .setting-main .item > div {
   display: -webkit-box;
   display: -ms-flexbox;
